# playground

C++/: CudaBugRepro.cu  enableIfTest.cpp
ML/Coursera - ML Intro/Week2/: Solution.py
ML/Coursera - ML Intro/Week5/ex4/: token.mat
foreach_cuda/: AddListsFunctor.cu  AddScalarFunctor.cu  AddScalar_Functor.cu  CMakeLists.txt  Utils.cuh  main.cu
